feat: 更新合作页

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "VITE_BASE_DIR=/ vitepress build",
     "build:github": "VITE_BASE_DIR=/OVO-Tab-Official-Web/ vitepress build",
     "build:mine": "VITE_BASE_DIR=/ovo-tab/ vitepress build",
-    "docs:preview": "vitepress preview"
+    "docs:preview": "vitepress preview",
+    "build:all":"pnpm build && pnpm build:github && pnpm build:mine"
   },
   "keywords": [],
   "author": "",
